feat(Evaluatory): 🔧 set up development environnement

--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -8,7 +8,7 @@
             <sup>S</sup>
         </abbr>
     </a>
-    <nav>
+    <nav aria-label="main-navigation">
         <ul role="list" data-layout="cluster" data-props="space:s">
             {% for item in nav.items %}
                 <li>
