--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -14,7 +14,7 @@
             <h2 class="visually-hidden">Subscribe</h2>
             <p>
                 You can subscribe to the RSS feeds for
-                <a data-button="link" href="/feed.xml">all findings</a>.
+                <a href="/feed.xml">all findings</a>.
             </p>
         </div>
         <small>Generated from a Notion database using Eleventy and served over Netlify.
