feat: 🎨 UI changes

--- a/src/_includes/partials/reference-item.njk
+++ b/src/_includes/partials/reference-item.njk
@@ -1,5 +1,5 @@
 <li class="reference-item" data-props="noMeasure">
-    <a data-button="text" rel="noopener nofollow noreferrer" target="{{ '_blank' if reference.url }}" href="{{ (reference.url if reference.url else '#') }}">
+    <a rel="noopener nofollow noreferrer" target="{{ '_blank' if reference.url }}" href="{{ (reference.url if reference.url else '#') }}">
         <b>
             {{ reference.name }}
         </b>
