--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -17,7 +17,7 @@
                 <a href="/feed.xml">all findings</a>.
             </p>
         </div>
-        <small>Generated from a Notion database using Eleventy and served over Netlify.
-            </small>
+        {# <small>Generated from a Notion database using Eleventy and served over Netlify.
+            </small> #}
     </div>
 </footer>
