--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -13,8 +13,8 @@
         <div>
             <h2 class="visually-hidden">Subscribe</h2>
             <p>
-                You can subscribe to the RSS feeds for
-                <a href="/feed.xml">all findings</a>.
+                You can subscribe to the 
+                <a href="/feed.xml">RSS feed for all findings</a>.
             </p>
         </div>
         {# <small>Generated from a Notion database using Eleventy and served over Netlify.
