--- a/src/css/_globals.css
+++ b/src/css/_globals.css
@@ -21,7 +21,7 @@ h6 {
   line-height: 1.2;
   --measure: 40ch;
   max-width: var(--measure);
-  font-weight: normal;
+  font-weight: bold;
 }
 h1,
 [data-heading~="1"] {
@@ -131,7 +131,6 @@ pre {
 
 code {
   font-family: var(--font-monospace);
-  /* border: var(--border-thin) solid var(--color-dark-accent); */
   font-size: var(--step--1);
   padding: calc(var(--space-2xs) * 0.75) var(--space-2xs);
   border-radius: 5px;
