--- a/src/_includes/layouts/nested-page-layout.njk
+++ b/src/_includes/layouts/nested-page-layout.njk
@@ -1,7 +1,7 @@
 {% extends "layouts/base-layout.njk" %}
 {% block content %}
     {% include "partials/site-breadcrumbs.njk" %}
-    <div data-layout="stack" data-props="space:s">
+    <div class="measured-container" data-layout="stack" data-props="space:s">
         {{ content | safe }}
     </div>
 {% endblock %}
