--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -13,11 +13,11 @@
         <div>
             <h2 class="visually-hidden">Subscribe</h2>
             <p>
-                You can subscribe to the 
-                <a href="/feed.xml">RSS feed for all findings</a>.
+                You can subscribe to the
+                <a data-button="link" href="/feed.xml">RSS feed for all findings</a>.
             </p>
         </div>
-        {# <small>Generated from a Notion database using Eleventy and served over Netlify.
-            </small> #}
+        <small>© 2022 Yannick Nana. Powered by Notion / Eleventy / GitHub / Netlify / Coffee
+        </small>
     </div>
 </footer>
