feat: 🎨 Improve layouts and colors

--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -1,5 +1,5 @@
 <footer class="padded-container" data-props="x:start space:l">
-    <div data-layout="stack slice">
+    <div data-layout="stack slice" class="measured-container">
         <hr/>
         <nav>
             <h2 class="visually-hidden" data-heading="6">Other links</h2>
