--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,4 +1,4 @@
-<header class="padded-container" data-layout="cluster" data-props="y:center x:between">
+<header class="padded-container measured-container" data-layout="cluster" data-props="y:center x:between">
     <a data-button="text" href="/">
     <span data-font="emoji" aria-hidden="true">🏠</span>
     {{ meta.site_name }}</a>
