--- a/src/css/_tokens.css
+++ b/src/css/_tokens.css
@@ -40,7 +40,7 @@
   --controls-minimum-height: 46px;
 
 
-  --gray-50: #FFF;
+  --gray-0: #FFFFFF;
   --gray-50: #fbfcfe;
   --gray-100: #e4ecf9;
   --gray-200: #b7ccef;
