refactor: ⚰️Remove dead code and comments

--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -1,5 +1,4 @@
-<footer class="padded-container" data-props="x:start space:l">
-    <div data-layout="stack slice" class="measured-container">
+<footer class="measured-container" data-layout="stack" data-props="x:start space:m">
         <hr/>
         <nav>
             <h2 class="visually-hidden" data-heading="6">Other links</h2>
@@ -9,7 +8,6 @@
                 {% endfor -%}
             </div>
         </nav>
-        {% include "partials/site-search.njk" %}
         <div>
             <h2 class="visually-hidden">Subscribe</h2>
             <p>
@@ -19,5 +17,4 @@
         </div>
         <small>© 2022 Yannick Nana. Powered by Notion / Eleventy / GitHub / Netlify / Coffee
         </small>
-    </div>
 </footer>
