--- a/src/_includes/layouts/base-layout.njk
+++ b/src/_includes/layouts/base-layout.njk
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     {% include "partials/site-head.njk" %}
-    <body  style="--min-height: 100vh;">
+    <body>
         {% include "partials/site-header.njk" %}
         <main id="main-content" class="measured-container" data-layout="stack" data-props="x:stretch space:l">
             {% block content %}
