--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -42,15 +42,10 @@ eleventyComputed:
     <h3 data-heading="5" class="visually-hidden">
         {{ "All" if currentCategory == 'All' else currentCategory }}
     </h3>
-    <ul data-layout="stack" data-props="space:s" >
+    <ul data-layout="stack" role="list" data-props="space:s" >
         {%- set entries = collections.stories | filterByCategory(currentCategory) | limitTo(50) -%}
         {%- for entry in entries %}
             {% include "partials/story-card-entry.njk" %}
         {% endfor -%}
     </ul>
-        {# {% set view_all_url = "findings" if currentCategory == "All" else "categories/"+currentCategory | slugify %}
-        {% set see_more_button_text = "Explore all findings" if currentCategory == "All" else "Explore more findings about "+currentCategory %}
-        <a data-button="outline" href="/{{ view_all_url }}">
-            {{ see_more_button_text }}
-        </a> #}
 </section>
