--- a/src/content/home-page.njk
+++ b/src/content/home-page.njk
@@ -43,7 +43,7 @@ eleventyComputed:
         {{ "All" if currentCategory == 'All' else currentCategory }}
     </h3>
     <ul data-layout="stack" role="list" data-props="space:s" >
-        {%- set entries = collections.stories | filterByCategory(currentCategory) | limitTo(50) -%}
+        {%- set entries = collections.stories | filterByCategory(currentCategory) | limit(50) -%}
         {%- for entry in entries %}
             {% include "partials/story-card-entry.njk" %}
         {% endfor -%}
