--- a/src/content/stories/story-page.njk
+++ b/src/content/stories/story-page.njk
@@ -52,7 +52,7 @@ eleventyComputed:
     </header>
     <section aria-labelledby="summary">
         <div data-layout="stack" data-props="space:xs">
-            <h2 id="summary" data-heading="6 anchor">
+            <h2 id="summary">
                 <a href="#summary">Overview</a>
             </h2>
             <div itemprop="articleBody" data-layout="stack" data-markdown>
@@ -64,7 +64,7 @@ eleventyComputed:
     </section>
     <section aria-labelledby="references">
         <div data-layout="stack" data-props="x:start space:s">
-            <h2 id="references" data-heading="6 anchor">
+            <h2 id="references">
                 <a href="#references">References</a>
             </h2>
             <p>Here you can find a list of references to dive deeper on the subject.</p>
@@ -96,7 +96,7 @@ eleventyComputed:
     </section>
     <section aria-labelledby="contribute" data-layout="stack">
         {# <div data-layout="stack" data-props="x:start space:xs"> #}
-            <h2 id="contribute" data-heading="4 anchor">
+            <h2 id="contribute">
                 <a href="#contribute">Contribute</a>
             </h2>
             <p data-props="space:s">
