refactor: 🔥 Better project structure

--- a/src/_includes/partials/site-head.njk
+++ b/src/_includes/partials/site-head.njk
@@ -31,9 +31,9 @@
     {% if emojicon %}
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{emojicon}}</text></svg>">
     {% endif %}
-    <link rel="apple-touch-icon" href="/images/icons/icon-180.png">
-    <link rel="shortcut icon" href="/images/icons/icon-32.png" type="image/x-icon" sizes="32x32" />
-    <link rel="shortcut icon" href="/images/icons/icon-16.png" type="image/x-icon" sizes="16x16" />
+    <link rel="apple-touch-icon" href="/assets/images/icons/icon-180.png">
+    <link rel="shortcut icon" href="/assets/images/icons/icon-32.png" type="image/x-icon" sizes="32x32" />
+    <link rel="shortcut icon" href="/assets/images/icons/icon-16.png" type="image/x-icon" sizes="16x16" />
     <meta name="author" content="{{meta.site_author}}">
     {# Prefetch  main pages #}
     {%- for category in collections.categoriesAndAll %}
