--- a/src/content/stories/stories-thumbnails.njk
+++ b/src/content/stories/stories-thumbnails.njk
@@ -3,7 +3,7 @@ pagination:
   data: collections.stories
   size: 1
   alias: story
-permalink: "/images/og-images/og-{{ story.slugs | slugify }}.svg"
+permalink: "assets/images/og-images/og-{{ story.slugs | slugify }}.svg"
 eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
