--- a/src/assets/styles/_main.css
+++ b/src/assets/styles/_main.css
@@ -142,6 +142,11 @@ inspiration: https://codepen.io/thierry/pen/qBqYmgw
 }
 
 /* PAGE LEVEL BREADCRUMBS */
+.breadcrumbs-navigation{
+  background-color: var(--color-light-accent);
+  border-left: var(--border-thick) solid var(--color-dark-accent);
+  padding: var(--space-s);
+}
 .breadcrumbs-navigation ul{
   --measure: initial;
   --offset: var(--space-xs);
@@ -153,10 +158,7 @@ inspiration: https://codepen.io/thierry/pen/qBqYmgw
   position: relative;
   top: -5px;
 }
-.breadcrumbs-navigation li:last-child::after{
-  content: "  (📍you are here)" ;
-  font-size: var(--step--1);
-}
+
 
 .breadcrumbs-navigation li:nth-child(2){
   margin-left: calc(var(--offset) * 1);
@@ -173,6 +175,9 @@ inspiration: https://codepen.io/thierry/pen/qBqYmgw
 /* } */
 
 /* HOME PAGE CATEGORIES CHIPS FILTER */
+.categories-navigation{
+  margin-bottom: var(--space-s);
+}
 .categories-navigation ul {
   --space: var(--space-2xs);
 }
